@@ -1,3 +1,8 @@
+2006-08-03  Mats Bengtsson  <mabe@drongo.s3.kth.se>
+
+	* python/convertrules.py: Fix indentation bug that broke
+	conversion of files older than 1.3.117.
+
 2006-08-02  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* lily/*-engraver.cc: convert all try_music functions in
